<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@android:color/background_light"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Title"
                        style="@style/font_style" />

                    <ImageView
                        android:id="@+id/Poster_Image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/posterimg"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <ImageView
                                android:id="@+id/Favourite"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/staroff"
                                android:paddingTop="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginEnd="25dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginRight="25dp"
                                android:contentDescription="@string/setasfavourite"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:weightSum="1"
                                android:padding="30dp"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true">

                                <TextView
                                    android:id="@+id/Release_Date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#0a0a09"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/Vote_Rating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="20dp"
                                    android:textSize="20sp"
                                    android:textColor="#0a0a09"
                                    android:textAlignment="center" />

                            </LinearLayout>

                        </RelativeLayout>

                    </LinearLayout>
                    <!--Overview-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/OverviewTitle"
                            android:text="@string/overview"
                            style="@style/font_style" />

                        <TextView
                            android:id="@+id/Overview"
                            android:textSize="18sp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#0a0a09" />
                    </LinearLayout>
                    <!--Overview-->
                    <!--trailers-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/trailers"
                            style="@style/font_style"
                            android:text="@string/trailers" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:padding="10dp"
                                    android:id="@+id/button"
                                    android:src="@drawable/powerampiconmax"
                                    android:layout_gravity="center"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="@string/playonyoutube"
                                    />
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/TrailerName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#0a0a09"
                                android:textAlignment="center"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center" />
                        </LinearLayout>
                    </LinearLayout>
                    <!--trailers-->
                    <!--Reviews-->

                    <TextView
                        android:background="@color/primary"
                        android:text="@string/recommendations"
                        style="@style/font_style" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RecommendationsRecyclerView"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp" />

                </LinearLayout>
            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_share"
                app:fabSize="normal"
                app:borderWidth="0dp"
                android:layout_gravity="bottom|end"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:id="@+id/share_fab"
                android:contentDescription="Share">
            </android.support.design.widget.FloatingActionButton>

        </FrameLayout>

    </LinearLayout>

